# sql_study_group

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  SETUP_USAGE.md  SQL_CURRICULUM_PROCESS.md  SQL_PRACTICE_APP_README.md  app.py  pyproject.toml  requirements.txt  setup.py  syllabus.md
exercises/: week_4_key.json
exercises/week_4/: week_4_key_v1.json  week_4_key_v2.json  week_4_key_v3.json  week_4_key_v4.json
exercises/week_5/: week_5_key.json  week_5_key_v2.json  week_5_key_v3.json  week_5_key_v4.json  week_5_key_v5.json
practice/: week_2_practice.md  week_3_practice.md  week_4_offline_practice.md  week_4_practice.md  week_5_offline_practice.md
reports/week_4/: week_4_key_report_data_jobs.md  week_4_key_report_data_jobs_v1.md  week_4_key_report_data_jobs_v2.md  week_4_key_report_data_jobs_v4.md
reports/week_5/: week_5_key_report_data_movies_dataset_v5.md  week_5_movies_dataset_report.md  week_5_movies_dataset_report_v3.md
schemas/: data_schema_data_jobs.json  data_schema_data_movies_dataset.json  data_schema_jobs.json
scripts/asset_generation/: __init__.py  generate_syllabus.py  syllabus_schema.json
scripts/core/: explore_dataset.py  sql_helper.py
scripts/data_schema_generation/: __init__.py  create_tables_from_queries.py  generate_data_schema_generic.py  generate_data_schema_jobs.py  initial_exploration_data_jobs.json  initial_exploration_data_movies_dataset.json  table_creation_queries_data_jobs.json  (+4 more)
solutions/: week_2_practice_solutions.md  week_3_practice_solutions.md  week_4_practice_solutions.md
templates/: index.html
(+19 files in other folders)
